Styled modal and fixed overflow issues for sm and xs screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -117,6 +117,11 @@ body {
     }
 }*/
 
+.game-container,
+.game-btn-container {
+    padding: 0;
+}
+
 .game-container {
     .game-options-wrapper {
         margin-top: 20px;
@@ -241,6 +246,10 @@ button:focus {
         color: #ff1810;
         text-shadow: 1px 1px 1px #fafafa;
     }
+}
+
+.close:hover {
+    color: #ff1810;
 }
 
 .modal-body-text {
